Cleaned up error and removed attempt to try and write output